// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`from > from(-90) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-90
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
-90
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(-Infinity) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-Infinity
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be finite, got: -Infinity
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
0
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(45.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
45.5
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
45.5
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(90) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
90
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
90
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(180) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
180
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
180
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(360) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
360
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
360
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(Infinity) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Infinity
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be finite, got: Infinity
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(NaN) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
NaN
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: Value must be finite, got: NaN
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is('90') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
90
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-90) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-90
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-Infinity) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-Infinity
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(45.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
45.5
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(90) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
90
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(180) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
180
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(360) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
360
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(Infinity) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Infinity
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(NaN) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
NaN
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
undefined
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-90) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-90
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
-90
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-Infinity) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-Infinity
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
0
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(45.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
45.5
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
45.5
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(90) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
90
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
90
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(180) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
180
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
180
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(360) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
360
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
360
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(Infinity) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Infinity
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(NaN) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
NaN
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;
